<resources>
    <string name="app_name">台灣美食地圖</string>
    <string name="app_name_dev">台灣美食地圖Dev</string>

    <!--  文字陣列  -->
    <string-array name="search_type">
        <item>附近的餐廳</item>
        <item>基隆市</item>
        <item>台北市</item>
        <item>新北市</item>
        <item>桃園縣</item>
        <item>新竹市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>台中市</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義市</item>
        <item>嘉義縣</item>
        <item>台南市</item>
        <item>高雄市</item>
        <item>屏東縣</item>
        <item>台東縣</item>
        <item>花蓮縣</item>
        <item>宜蘭縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>

    <!--  提示文字  -->
    <string name="hint_introduction">不知道要吃甚麼嗎？</string>
    <string name="hint_login">讓我們開始吧！</string>
    <string name="hint_enter_name">輸入名字</string>
    <string name="hint_anonymity_login">注意：匿名登入\n在您下次登出後會刪除帳號</string>
    <string name="hint_please_enter_name">請輸入您的名字!!!</string>
    <string name="hint_login_success">登入成功</string>
    <string name="hint_login_error">發生一些錯誤</string>
    <string name="hint_internet_error_title">網路連線不穩定</string>
    <string name="hint_internet_error_subtitle">請重新確認您的網路連線狀況。</string>
    <string name="hint_search_now">開始搜尋</string>
    <string name="hint_select_region">請選擇地區</string>
    <string name="hint_near_region">附近的餐廳</string>
    <string name="hint_not_location_permission">請開啟定位權限</string>
    <string name="hint_not_camera_permission">請開啟相機權限</string>
    <string name="hint_not_audio_permission">請開啟語音權限</string>
    <string name="hint_not_gps">請開啟定位功能</string>
    <string name="hint_not_provider_gps">目前無可用的定位</string>
    <string name="hint_quick_view">快速瀏覽</string>
    <string name="hint_view_all">查看全部</string>
    <string name="hint_view_more">查看更多</string>
    <string name="hint_error">發生一些錯誤</string>
    <string name="hint_crop_cancel">取消相片選取</string>
    <string name="hint_now_register">立即註冊</string>
    <string name="hint_now_login">立即登入</string>
    <string name="hint_hello_new">你好，新使用者 ～\n註冊以享用更多服務！</string>
    <string name="hint_welcome">歡迎回來！</string>
    <string name="hint_input_username">輸入使用者名稱</string>
    <string name="hint_setting_password">設定密碼</string>
    <string name="hint_input_password">輸入您的密碼</string>
    <string name="hint_confirm_password">設定密碼</string>
    <string name="hint_input_password_repeat">確認您的密碼</string>
    <string name="hint_remember_me">記住我</string>
    <string name="hint_no_account">"還沒有帳戶嗎？</string>
    <string name="hint_now_start">立即開始</string>
    <string name="hint_login_register">登入 / 註冊</string>
    <string name="hint_email_is_empty">Email不能為空</string>
    <string name="hint_email_wrong_format">錯誤的Email格式</string>
    <string name="hint_password_is_empty">密碼不能為空</string>
    <string name="hint_password_less_char">密碼至少要6位數</string>
    <string name="hint_password_more_char">密碼不要超過30位數</string>
    <string name="hint_password_less_alphabet">請至少包含一個英文字母</string>
    <string name="hint_account_is_empty">帳號不能為空</string>
    <string name="hint_account_less_char">帳號至少要4位數</string>
    <string name="hint_account_more_char">帳號不要超過15位數</string>
    <string name="hint_account_not_format">帳號必須包含英文</string>
    <string name="hint_register_prompt_title">查無此帳號</string>
    <string name="hint_register_prompt_subtitle">請問是否要註冊此帳號？</string>
    <string name="hint_register_success">註冊成功</string>
    <string name="hint_delete_account">刪除帳號</string>
    <string name="hint_delete_account_success">刪除成功</string>
    <string name="hint_logout_success">登出成功</string>
    <string name="hint_popular_restaurant">附近的人氣餐廳</string>
    <string name="hint_favorite_popular_restaurant">最愛清單的人氣餐廳</string>
    <string name="hint_all_restaurant">全部餐廳</string>
    <string name="hint_google_ratings_total">"則 Google 評論</string>
    <string name="hint_from_google_top5_reviews">來自 Google 的前五評論</string>
    <string name="hint_no_website">找不到網站</string>
    <string name="hint_no_phone">找不到電話</string>
    <string name="hint_favorite_list">我的最愛清單</string>
    <string name="hint_workday_null">營業時間：未提供</string>
    <string name="hint_no_more_data">沒有更多資料了</string>
    <string name="hint_prompt_logout_title">是否要登出</string>
    <string name="hint_prompt_delete_account_title">是否要刪除帳號</string>
    <string name="hint_prompt_delete_account_subtitle">刪除帳號後就無法進行恢復</string>
    <string name="hint_prompt_remove_favorite_title">是否要移除最愛</string>
    <string name="hint_prompt_add_black_list_title">是否要新增至黑名單</string>
    <string name="hint_prompt_remove_black_list_title">是否要移除黑名單</string>
    <string name="hint_prompt_not_gps_title">請開啟GPS定位</string>
    <string name="hint_share_url_title">分享餐廳</string>
    <string name="hint_success_push_favorite">成功新增最愛</string>
    <string name="hint_success_pull_favorite">成功移除最愛</string>
    <string name="hint_failed_push_favorite">無法新增最愛</string>
    <string name="hint_failed_pull_favorite">無法移除最愛</string>
    <string name="hint_already_push_favorite">已經加入至最愛</string>
    <string name="hint_success_push_black_list">成功新增黑名單</string>
    <string name="hint_success_pull_black_list">成功移除黑名單</string>
    <string name="hint_failed_push_black_list">無法新增黑名單</string>
    <string name="hint_failed_pull_black_list">無法移除黑名單</string>
    <string name="hint_prompt_search_in_here">請在此輸入</string>
    <string name="hint_prompt_set_password">修改密碼</string>
    <string name="hint_set_password_success">修改成功</string>
    <string name="hint_user_setting">使用者設定</string>
    <string name="hint_in_here_search">在這裡搜尋</string>
    <string name="hint_history_page">歷史紀錄</string>
    <string name="hint_black_list">黑名單列表</string>
    <string name="hint_clear_history_search">清除歷史紀錄</string>
    <string name="hint_add_address">新增地址</string>
    <string name="hint_use_my_location">使用當前位址</string>
    <string name="hint_confirm_address">確認地址</string>
    <string name="hint_not_found_location">無法取的位址</string>
    <string name="hint_read_more">閱讀更多\.\.\.</string>
    <string name="hint_read_less">收起</string>
    <string name="hint_no_assign_type">未指定類別</string>
    <string name="hint_is_track_location">定位追蹤</string>
    <string name="hint_no_track_location">取消追蹤</string>
    <string name="hint_watch_route">查看路徑</string>
    <string name="hint_search_here">搜尋這裡</string>

    <!--  頁面名稱  -->
    <string name="page_home">首頁</string>
    <string name="page_favorite">最愛</string>
    <string name="page_maps">地圖</string>
    <string name="page_profiles">個人資料</string>

    <!--  一般單詞  -->
    <string name="text_next">下一步</string>
    <string name="text_start">開始</string>
    <string name="text_anonymity">匿名登入</string>
    <string name="text_confirm">確定</string>
    <string name="text_cancel">取消</string>
    <string name="text_loading">載入中\.\.\.</string>
    <string name="text_recommended">推薦</string>
    <string name="text_open_now">營業中</string>
    <string name="text_close_now">已打烊</string>
    <string name="text_null">未提供</string>
    <string name="text_taipei">台北市</string>
    <string name="text_login">登入</string>
    <string name="text_register">註冊</string>
    <string name="text_logout">登出</string>
    <string name="text_username">使用者名稱</string>
    <string name="text_password">密碼</string>
    <string name="text_workday">營業時間</string>
    <string name="text_dine_in">內用</string>
    <string name="text_takeout">外帶</string>
    <string name="text_delivery">外送</string>
    <string name="text_website">網站</string>
    <string name="text_go_navigation">前往導航</string>
    <string name="text_add_favorite">加置最愛</string>
    <string name="text_call_phone">致電</string>
    <string name="text_back">返回</string>
    <string name="text_success">成功</string>
    <string name="text_failed">失敗</string>
    <string name="text_navigation">導航</string>
    <string name="text_favorite">最愛</string>
    <string name="text_share">分享</string>
    <string name="text_detail">詳細</string>
    <string name="text_distance">距離</string>
    <string name="text_kilometer">公里</string>
    <string name="text_meter">公尺</string>
    <string name="text_delete">刪除</string>
    <string name="text_query">查詢</string>
    <string name="text_top">TOP</string>
    <string name="text_near">附近</string>

    <!--  特殊符號  -->
    <string name="u2022">•</string>
    <string name="dot">\.\.\.</string>

    <!--  嵌入字  -->

    <string name="text_number_meter">距離 %,.1f 公尺</string>
    <string name="text_number_kilometer">距離 %,.1f 公里</string>
    <string name="text_number_int_meter">距離 %d 公尺</string>
    <string name="text_number_int_kilometer">距離 %d 公里</string>

    <!--  下載狀態  -->
    <string name="download_status_failed">下載失敗，請重新嘗試</string>
    <string name="download_status_paused">下載暫停</string>
    <string name="download_status_pending">準備中</string>
    <string name="download_status_running">下載中\.\.\.</string>
    <string name="download_status_successful">下載成功</string>
    <string name="download_status_nothing">無法進行下載</string>

    <!--  導航模式  -->
    <string name="navigation_title">請選擇導航模式</string>
    <string name="navigation_drive">開車</string>
    <string name="navigation_bike">腳踏車</string>
    <string name="navigation_Motorcycle">摩托車</string>
    <string name="navigation_walk">走路</string>

    <!--  特殊  -->
    <string name="menu_enable_pan">Pan</string>
    <string name="menu_enable_zoom">Zoom</string>
    <string name="menu_enable_rotation">Rotation</string>
    <string name="menu_restrict_rotation">Restrict rotation</string>
    <string name="menu_enable_overscroll">Overscroll</string>
    <string name="menu_enable_overZoom">OverZoom</string>
    <string name="menu_fill_viewport">Fill viewport</string>
    <string name="menu_fit_method">Fit method</string>
    <string name="menu_bounds_type">Bounds type</string>
    <string name="menu_gravity">Gravity</string>
    <string name="menu_enable_slow">Slow animations</string>
    <string name="menu_enable_overlay">Debug overlay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>