<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".ui.fragment.launch.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/img_icon"
                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/tvTitle"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgIcon"
                app:layout_constraintTop_toTopOf="@id/guidelineTop" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/guidelineCenterBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guidelineTop"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/hint_login"
                android:textColor="@color/primary"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@id/lottieView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edName"
                style="@style/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/hint_enter_name"
                android:inputType="text"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toTopOf="@id/btnStart"
                app:layout_constraintEnd_toEndOf="@id/btnStart"
                app:layout_constraintStart_toStartOf="@id/btnStart"
                app:layout_constraintTop_toBottomOf="@id/tvContent" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnStart"
                style="@style/primaryButtonStyle"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/text_anonymity"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSupport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/hint_anonymity_login"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toStartOf="@id/guidelineLeft"
                app:layout_constraintTop_toBottomOf="@id/btnStart"
                app:layout_constraintVertical_bias="0.2" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieArrow"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/btnStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineRight"
                app:layout_constraintStart_toEndOf="@id/btnStart"
                app:layout_constraintTop_toBottomOf="@id/tvContent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/arrow" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenterTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenterBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>