<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/card_header"
            style="@style/CustomCardTopCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_prompt_top"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/navigation_title"
                android:textColor="@color/prompt_DOWN"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </FrameLayout>

        <View
            android:id="@+id/supportLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_header" />

        <FrameLayout
            android:id="@+id/cardDrive"
            style="@style/CustomCardCenterCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supportLine">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDrive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_prompt_center"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/navigation_drive"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp" />

        </FrameLayout>

        <View
            android:id="@+id/supportLine1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardDrive" />

        <FrameLayout
            android:id="@+id/cardBike"
            style="@style/CustomCardCenterCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supportLine1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_prompt_center"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/navigation_bike"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp" />

        </FrameLayout>

        <View
            android:id="@+id/supportLine2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBike" />

        <FrameLayout
            android:id="@+id/cardMotorcycle"
            style="@style/CustomCardCenterCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supportLine2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMotorcycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_prompt_center"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/navigation_Motorcycle"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp" />

        </FrameLayout>

        <View
            android:id="@+id/supportLine3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardMotorcycle" />

        <FrameLayout
            android:id="@+id/cardWalk"
            style="@style/CustomCardBottomCorners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supportLine3">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWalk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_prompt_bottom"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/navigation_walk"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp" />

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardWalk">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_prompt"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/text_cancel"
                android:textColor="@color/red"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>