<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isTrack"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MapsFragment">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMyLocation"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/background_circle_white_back_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:imgTrackLocation="@{isTrack}"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_location_searching"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMyLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_open"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hint_is_track_location"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:tvTrackLocation="@{isTrack}"
            app:layout_constraintEnd_toEndOf="@+id/imgMyLocation"
            app:layout_constraintStart_toStartOf="@+id/imgMyLocation"
            app:layout_constraintTop_toBottomOf="@+id/imgMyLocation" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgMyRoute"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/background_circle_white_back_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_route"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMyLocation"
            app:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMyRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hint_watch_route"
            android:textColor="@color/g_gray700"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imgMyRoute"
            app:layout_constraintStart_toStartOf="@+id/imgMyRoute"
            app:layout_constraintTop_toBottomOf="@+id/imgMyRoute" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSearchHere"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/background_circle_white_back_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMyRoute"
            app:tint="@color/red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSearchHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hint_search_here"
            android:textColor="@color/g_gray700"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imgSearchHere"
            app:layout_constraintStart_toStartOf="@+id/imgSearchHere"
            app:layout_constraintTop_toBottomOf="@+id/imgSearchHere" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpRestaurant"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_50sdp"
            android:paddingEnd="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>